# awww

django/: .gitignore  README.md  pyproject.toml
django/accounts/: forms.py  urls.py  views.py
django/accounts/templates/accounts/: register.html
django/blog/: api.py  api_urls.py  drf_views.py  forms.py  models.py  urls.py
django/blog/templates/blog/: post_detail.html  post_list.html
django/mysite/: settings.py  urls.py
django/pages/: tests.py  urls.py  views.py
django/pages/static/pages/: style.css
django/pages/templates/pages/: greet.html  projects.html
django/templates/account/: login.html
django/templates/socialaccount/: authentication_error.html  signup.html
html-css/: LICENSE  server.py
html-css/public/: contact.html  index.html  projects.html  style.css
ts-game/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
ts-game/accounts/: forms.py  tests.py  urls.py  views.py
ts-game/game/: admin.py  api.py  api_urls.py  apps.py  models.py  serializers.py  signals.py  sse.py  tests.py
ts-game/game/migrations/: 0001_initial.py  0002_score_game_score_level_i_c8c9bb_idx.py
ts-game/mysite/: settings.py  urls.py
ts-game/pages/: tests.py
typescript/: README.md
typescript/lab-8/: index.html  package-lock.json  package.json  tsconfig.json
typescript/lab-8/src/: async.ts  blog.ts  main.ts  shape.ts  status.ts  utils.ts
typescript/lab-9-10/: .gitignore  package-lock.json  package.json  tsconfig.json
typescript/lab-9-10/blog/: admin.py  api.py  api_urls.py  drf_urls.py  serializers.py  views.py
(+33 files in other folders)
