[project]
name = "webapp"
version = "0.1.0"
description = "Django blog web application built across Labs 4–7 of the AWWW course"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-allauth[socialaccount]>=65.15.1",
    "django-debug-toolbar>=6.3.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "python-dotenv>=1.2.2",
]
